<resources>
    <string name="app_name">BlueAlert</string>
    <string name="mobile_number">Mobile Number(10 digits)</string>
    <string name="password">Password</string>
    <string name="ForgotP"><u>Forgot Password?</u></string>
    <string name="NoAccount"><u>Don\'t have an account? Sign up now</u></string>
    <string name="Email">Email Address</string>
    <string name="Name">Enter your name(Min. 3 characters)</string>
    <string name="DeliveryAddress">Delivery Address</string>
    <string name="ChoosePassw">Choose a password(Min. 4 password)</string>
    <string name="ConfirmPassw">Confirm Password</string>
    <string name="Welcome"><b>Welcome!</b></string>
    <string name="preference_file_name">Preferences</string>
    <string name="home_menu">Home</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>